newsag-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsag-backend
  namespace: newsag
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newsag-backend
  template:
    metadata:
      labels:
        app: newsag-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: newsag-backend
          image: ghcr.io/amareshasp/news_ag_service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
