newsag-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsag-backend-ingress
  namespace: newsag
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: newsag.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsag-backend
                port:
                  number: 80
